Developing the style of the setion on the bottom (color and svgs)

--- a/index.html
+++ b/index.html
@@ -76,12 +76,16 @@
         </div>
         
         <!--Solution button-->
-        <button>Calculate Repayments</button>
+        <button>
+          <link rel="stylesheet" href="">
+          Calculate Repayments
+        </button>
       </div>
     </div>
     <!-- Empty results start -->
     <div class="results-container">
       <div class="empty-results">
+        <img src="assets/images/illustration-empty.svg" alt="A calculator image">
         <h1>Results shown here</h1>
         <p>
           Complete the form and click “calculate repayments” to see what 
