Rearrangement of the pag, to make it larger

--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
         <h3>Total you'll repay over the term</h3>
         <p class="repay-amount"></p>
       </div>
-    </div> 
+    </div>
+    <div class="empty-div empty-left"></div>
+    <div class="empty-div empty-right"></div>
   </div>
 </body>
 </html>
