Rearrengement of the bottom section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="inputs-container">
       <div class="title">
         <h1>Mortgage Calculator</h1>
-        <p class="clear-all">Clear All</p>
+        <p class="clear-all"><a>Clear All</a></p>
       </div>
       
     
@@ -93,9 +93,6 @@
         your monthly repayments would be.
       </p>
     </div>
-  
-    <!-- Empty results end -->
-  
     <!-- Completed results start -->
     <div class="completed-results">
       <h1>Your results</h1>
