--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
         <!--The two options-->
         <div class="two-options-inputs">
           <label>
-            <input type="radio" name="mortgageType">
+            <div>
+              <input type="radio" name="mortgageType">
+            </div>
             <p>Repayment</p>
           </label>
   
@@ -100,13 +102,15 @@
         Your results are shown below based on the information you provided. 
         To adjust the results, edit the form and click “calculate repayments” again.
       </p>    
-      <div>
-        <h3>Your monthly repayments</h3>
-        <p class="monthly-payments"></p>
-      </div>
-      <div>
-        <h3>Total you'll repay over the term</h3>
-        <p class="repay-amount"></p>
+      <div class="to-pay-fees">
+        <div>
+          <h3>Your monthly repayments</h3>
+          <p class="monthly-payments"></p>
+        </div>
+        <div>
+          <h3>Total you'll repay over the term</h3>
+          <p class="repay-amount"></p>
+        </div>
       </div>
     </div>
     <div class="empty-div empty-left"></div>
