"Your results": general layout finished

--- a/index.html
+++ b/index.html
@@ -103,14 +103,16 @@
         To adjust the results, edit the form and click “calculate repayments” again.
       </p>    
       <div class="to-pay-fees">
-        <div>
+        <div class="monthly-repayments-container">
           <h3>Your monthly repayments</h3>
-          <p class="monthly-payments"></p>
+          <p class="monthly-payments-amount"></p>
         </div>
-        <div>
+        <div class="term-payments-container">
           <h3>Total you'll repay over the term</h3>
-          <p class="repay-amount"></p>
+          <p class="term-repayment-amount"></p>
         </div>
+        <div class="results-empty-right"></div>
+        <div class="results-empty-left"></div>
       </div>
     </div>
     <div class="empty-div empty-left"></div>
