--- a/index.html
+++ b/index.html
@@ -105,14 +105,12 @@
       <div class="to-pay-fees">
         <div class="monthly-repayments-container">
           <h3>Your monthly repayments</h3>
-          <p class="monthly-payments-amount"></p>
+          <p class="payments monthly-payments-amount">hello</p>
         </div>
         <div class="term-payments-container">
           <h3>Total you'll repay over the term</h3>
-          <p class="term-repayment-amount"></p>
+          <p class="payments term-repayment-amount"></p>
         </div>
-        <div class="results-empty-right"></div>
-        <div class="results-empty-left"></div>
       </div>
     </div>
     <div class="empty-div empty-left"></div>
