Arranging the bottom section of the to-pay-fees container

--- a/index.html
+++ b/index.html
@@ -105,11 +105,16 @@
       <div class="to-pay-fees">
         <div class="monthly-repayments-container">
           <h3>Your monthly repayments</h3>
-          <p class="payments monthly-payments-amount">hello</p>
+
+          <div class="payments monthly-payments-amount">
+            <p>hello</p>
+          </div>
         </div>
         <div class="term-payments-container">
           <h3>Total you'll repay over the term</h3>
-          <p class="payments term-repayment-amount"></p>
+          <div class="payments term-repayment-amount">
+            <p>hello</p>
+          </div>
         </div>
       </div>
     </div>
