Few adjustments on the new screen size

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="inputs-container">
       <div class="title">
         <h1>Mortgage Calculator</h1>
-        <p class="clear-all"><a>Clear All</a></p>
+        <button class="clear-all"><a>Clear All</a></button>
       </div>
       
     
@@ -81,7 +81,7 @@
         </div>
       </div>
         <!--Solution button-->
-      <button>
+      <button id="calculate-button">
         <object data="assets\images\icon-calculator.svg" type="image/svg+xml"></object>
         Calculate Repayments
       </button>
@@ -107,13 +107,13 @@
           <h3>Your monthly repayments</h3>
 
           <div class="payments monthly-payments-amount">
-            <p>hello</p>
+            <p></p>
           </div>
         </div>
         <div class="term-payments-container">
           <h3>Total you'll repay over the term</h3>
           <div class="payments term-repayment-amount">
-            <p>hello</p>
+            <p></p>
           </div>
         </div>
       </div>
