--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
           <h3>Your monthly repayments</h3>
 
           <div class="payments monthly-payments-amount">
-            <p></p>
+            <p>hello</p>
           </div>
         </div>
         <div class="term-payments-container">
           <h3>Total you'll repay over the term</h3>
           <div class="payments term-repayment-amount">
-            <p></p>
+            <p>hello</p>
           </div>
         </div>
       </div>
