Alloting the code to the SCSS files

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="inputs-container">
       <div class="title">
         <h1>Mortgage Calculator</h1>
-        <button class="clear-all"><a>Clear All</a></button>
+        <button class="clear-all">Clear All</button>
       </div>
       
     
