Fixing some problems with the size of the wholecontainer in the new screen size

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="./assets/images/favicon-32x32.png"
     />
 
-    <link rel="stylesheet" href="styles\main.css" />
+    <link rel="stylesheet" href="styles\main1.css" />
 
     <style>
       @font-face {
