Fixing a problem with the input values being null

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       }
     </style>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <div class="whole-container">
