Adding the first option "Repayment" totally functional.

--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
 
           <!--The two options-->
           <div class="two-options-inputs">
-            <label>
+            <label class="repayment">
               <div>
-                <input type="radio" name="mortgageType" />
+                <input type="radio" name="mortgageType" value="repayment" />
               </div>
               <p>Repayment</p>
             </label>
 
-            <label>
-              <input type="radio" name="mortgageType" />
+            <label class="interest-only">
+              <input type="radio" name="mortgageType" value="interest-only" />
               <p>Interest Only</p>
             </label>
           </div>
